src/app/design/frontend/Scandiweb/pwa/src/app/component/MyAccountOverlay/MyAccountOverlay.extended.style.scss
:root {
    --social-login-provider-backgrdoun-color: var(--secondary-base-color);
    --social-login-provider-hover-background-color: var(--secondary-base-color);
}

.MyAccountOverlay {
    font-family: 'Roboto', sans-serif;
    justify-self: flex-end;
    grid-column: 3;
    right: 0;
    padding-top: 1rem;

    &-Back {
        display: none;

        @include mobile {
            display: block;
            position: absolute;
        }

        .Button {
            background: transparent;
            border: unset;
            font-size: 15px;
            z-index: 10;

            &::before,
            &::after {
                content: '';
                position: absolute;
            }

            &::before {
                width: 18px;
                height: 1px;
                top: 7px;
                right: 8px;
                background-color: var(--header-color);
            }

            &::after {
                width: 8px;
                height: 8px;
                top: 3px;
                left: 19px;
                transform: rotate(-45deg);

                border: {
                    top: 1px solid var(--header-color);
                    left: 1px solid var(--header-color);
                }
            }
        }
    }

    &-Column {
        display: flex;
        width: 100%;
        justify-content: center;

        @include after-mobile {
            width: 37.5%;
            max-width: 375px;
        }

        .Form {
            max-width: 375px;
        }

        &_right {
            display: block;

            .MyAccountOverlay {
                &-Additional {
                    .Button{
                        width: 345px;

                        &:focus {
                            border-style: solid;
                            border-color: var(--button-border);
                            color: var(--button-color);
                            background-color: var(--button-background);
                        }
                    }

                    section:first-of-type {
                        padding-top: 0;
                        display: flex;
                        flex-direction: column;
                    }
                }
            }

            @include mobile {
                display: none;
            }
        }

        &_left {
            width: 100%;

            .Form {
                margin: 0 auto;
                padding-bottom: unset;
            }

            .MyAccountOverlay {
                &-Additional {
                    display: block;
                    max-width: 375px;

                    section:first-of-type {
                        padding-top: 0;
                        display: flex;
                        flex-direction: column;
                    }

                    @include after-mobile {
                        display: none;
                    }
                }
            }
        }
    }

    &-Action {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        width: 100%;
        justify-content: space-evenly;

        h4 {
            text-transform: unset;
            font-family: 'Roboto', sans-serif;
            text-align: left;
            font-size: 15px;

             @include after-mobile {
                 font-size: 25px;
                 margin-bottom: 20px;
             }
        }

        &_state {
            &_signIn {
                h4 {
                    text-align: left;
                    margin-bottom: 20px;
                }
            }

            &_createAccount {
                .Field {
                    padding-bottom: 10px;
                }

                @include mobile {
                    padding-top: 0;
                }
            }

            &_forgotPassword {
                width: 100%;

                .Form {
                    width: 100%;

                    .Field {
                        @include mobile{
                            margin-top: unset;
                        }
                    }

                    .Button{
                        margin-top: 20px;
                        font-weight: normal;
                    }
                }
            }
        }
    }

    &-ForgotPassword {
        width: 100%;
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-evenly;
    }

    &-ForgotPasswordAdditional {
        width: 100%;
        padding: 0 15px;
    }

    &-Member {
        padding-top: 35px;
        max-width: 345px;
        margin: 0 auto;

        @include after-mobile {
            padding-top: 12px;
        }

        h4 {
            margin-bottom: 20px;

            @include after-mobile {
                width: 150%;
            }
        }

        .Button {
            width: 100%;
            font-weight: normal;
        }
    }

    &-NewUser {
        max-width: 345px;
        padding-top: 35px;
        margin: 0 auto;

        h4 {
            margin-bottom: 20px;
        }

        .Button {
            width: 100%;
            font-weight: normal;
        }
    }

    &-Header {
        display: flex;
        flex-direction: column;
        width: 100%;

        h1 {
            font-family: 'Roboto', sans-serif;
            display: flex;
            justify-content: center;
            font-weight: bold;
            font-size: 20px;
            padding-bottom: 20px;

            @include after-mobile {
                padding-bottom: 34px;
                font-size: 30px
            }
        }
    }

    &-SubHeader {
        text-align: left;
        font-size: 20px;
        font-family: 'Roboto', sans-serif;
        font-weight: bold;
        width: 100%;
        margin-bottom: 20px;

        @include desktop {
            width: 150%;
        }
    }

    &-Buttons {
        margin: unset;

        .Button {
            width: 100%;
        }
    }

        &-Checkbox {
            margin-bottom: 10px;
            font-size: 15px;

            @include after-mobile {
                margin-top: 10px!important;
            }

            label:first-of-type {
                font-size: 13px;
                letter-spacing: 0.15px;
                margin-left: 20px;
                line-height: 15px;

                @include after-mobile {
                    font-size: 15px;
                }
            }

            input[type=checkbox] + label {
                transform: scale(1.5);
                margin-left: 18px;
                width: 20px;

                @include mobile {
                    width: 15px;
                }
            }
        }

    &-Confirm {
        font-size: 13px;
        margin-bottom: 20px;

        @include after-mobile {
            font-size: 15px;
        }

        a {
            font-size: 13px;
            text-decoration: underline;

            @include after-mobile {
                font-size: 15px;
            }
        }
    }


    &_isVisible {
        top: var(--header-overlay-offset-top);
    }

    &-Additional {
        padding: 21px 15px 35px 15px;
        margin: auto;

        @include after-mobile {
            display: block;
            padding: 0 15px 35px 15px;
        }

        @include desktop {
            width: 150%;
        }

        h4 {
            text-align: left;
            margin-bottom: 20px;

            @include after-mobile {
                display: block;
                margin-bottom: 20px;
            }
        }

        .Button {
            margin-top: 0;
        }

        &_state {
            &_forgotPasswordSuccess {
                padding-top: 0;
                text-align: center;

                h4 {
                    font-size: 1rem;
                    line-height: 1.5;
                    padding-bottom: 1.4rem;
                    font-weight: normal;
                    letter-spacing: normal;
                }

                .Button {
                    width: 100%;
                    margin-top: 10px;

                    @include after-mobile {
                        width: 345px;
                    }
                }
            }
        }
    }

    &-SocialButtons {
        display: flex;
        justify-content: space-evenly;
        padding-top: 1.5rem
    }

    &-Provider {
        background-color: var(--social-login-provider-backgrdoun-color);
        height: 36px;
        width: 100%;
        margin-bottom: 20px;

        &_loading {
            background: var(--image-default-background);
            animation: var(--placeholder-animation);
            background-image: var(--placeholder-image);
            background-size: var(--placeholder-size);
        }

        &:hover {
            background-color: var(--social-login-provider-hover-background-color);
        }

        img {
            transform: scale(0.7);
        }

        a {
            display: flex;
            justify-content: center;
            align-items: center;

            p {
                line-height: 37px;
                margin: auto;
                text-transform: uppercase;
                font-size: 18px;
                letter-spacing: -0.38px;
                color: #fff;

                @include after-mobile {
                    font-size: 15px;
                    line-height: 34px;
                }
            }
        }
    }

    &-Social {
        padding: 0 12px;
        max-width: 375px;
        margin: auto;

        h4 {
            text-align: left;
            margin-bottom: 20px;
        }

        @include after-mobile {
            padding-top: 40px;
        }
    }

    &-facebook {
        border: solid 1px #3c5a9a;
        background-color: #3c5a9a;
        transition: 0.5s;
        max-height: 39px;

        &:hover {
            text-decoration: none;
            background-color: #fff;

            p {
                color: #3c5a9a;
            }
        }
    }

    &-google {
        border: solid 1px #df4c3a;
        background-color: #df4c3a;
        transition: 0.5s;
        max-height: 39px;

        &:hover {
        text-decoration: none;
        background-color: #fff;

            p {
                color: #df4c3a;
            }
        }
    }
}

    .Button {
        &-Forgot {
            margin: 14px 0;

            @include after-mobile {
                margin: 20px 0;
            }

            &_likeLink {
                text-decoration: underline;
                text-align: left;
                font-size: 13px;
                letter-spacing: -0.33px;
                color: #888888;
            }
        }
    }

